v0.28.0
- MANTA-259 Support joint analysis of multiple diploid samples
- MANTA-260 Add per-sample filtration to separate QUAL and GQ filters for
diploid case
- MANTA-252 Add fast chrom median depth estimator (partally enables CRAM)
- MANTA-258 Add PL values to diploid output
v0.27.2
- MANTA-257 Fix rare failure condition for graph merge
- MANTA-255 include zlib in build, simplify win64 development
- MANTA-254 Fix handling of off-edge splicing in the RNA Jump Intron Aligner
- MANTA-253 improve alignment corner cases and debugging features
v0.27.1
- [#6] Fix assertion caused by filtered graph edges on bin boundaries.
- [#5] Improve robustness to filesystem delay (update ot pyflow v1.1.7)
v0.27.0
- MANTA-188/[#4] fix off-by-one position issues in some precise duplication
and inversion breakends
- MANTA-229 Add initial support for tumor-only analysis
v0.26.5
- Update pyflow to v1.1.6: fixes multithread bug introduced in v1.1.5.
Manta should be isolated from this issue in theory.
v0.26.4
- Update license to GPLv3
- Update to relicensed pyflow v1.1.5
- MANTA-244 Handle unstranded RNA data
- MANTA-239 Use RNA bam alignments for ref read scoring
- Fix core/memory auto-detect for OSX
v0.26.3
- Fix OSX build and demo run (req. update to boost 1.56)
- Update travis CI OSX build, static analyzer
v0.26.2
- MANTA-242 cleanup code portability and documentation:
-- Updated all build/installation and contributor guidelines
-- Updated Manta user guide
-- Added Travis CI configuration file for clang/gcc build and demo run
-- Minor code edits to clean compile on OS X 10.9, CentOS 5,6,7, Ubuntu
12.04 and 14.04
-- Updated demo: new dataset covers COSMIC HCC1954 variants, added test
to verify expected output from demo run.
v0.26.1
- Remove python reflection from run configuration process, fixes rare
config issue
- VCF output formatting: FileData corrected to FileDate
v0.26.0
- MANTA-224 improve short-fragment handling for RNA